Stop cutting nav on small screens

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -111,7 +111,7 @@ nav {
     }
   }
 
-  @media (max-height: 390px) {
+  @media (max-height: 390px) and (min-width: 768px) {
     display: none;
   }
 }
